<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content">

    <item
        android:id="@+id/btn_edit_goal"
        android:textSize="10sp"
        android:title="Edit Goal" />

    <item
        android:id="@+id/btn_delete_goal"
        android:textSize="10sp"
        android:title="Delete Goal" />

</menu>