<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        android:layout_width="wrap_content"/>

    <item
        android:id="@+id/navigation_goals"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/title_goals"
        android:layout_width="wrap_content"/>

    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/ic_timeline_black_24dp"
        android:title="@string/title_stats"
        android:layout_width="wrap_content"/>

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings"
        android:layout_width="wrap_content"/>


</menu>
