<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nikhilanj.oopomo_new.MainActivity">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottomnavigation"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:alwaysDrawnWithCache="true"
        android:animateLayoutChanges="true"
        android:animationCache="true"
        android:background="@android:color/white"
        android:fadingEdgeLength="4dp"
        app:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_above="@id/bottomnavigation"
        android:background="@drawable/bottomnavshadow"
        app:layout_constraintBottom_toTopOf="@+id/bottomnavigation"
        tools:layout_editor_absoluteX="8dp" />

</android.support.constraint.ConstraintLayout>
